[ISSUE-2] feat: Initialize electron project

--- a/package.json
+++ b/package.json
@@ -5,8 +5,67 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=dev electron .",
+    "dev-backend": "cross-env NODE_ENV=dev nodemon --exec electron .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy:osx": "electron-builder --mac",
+    "deploy:win32": "electron-builder --win portable --ia32",
+    "deploy:win64": "electron-builder --win portable --x64",
+    "deploy:linux32": "electron-builder --linux --ia32",
+    "deploy:linux64": "electron-builder --linux --x64"
   },
-  "author": "",
-  "license": "ISC"
+  "author": {
+    "name": "Hojin Choe",
+    "email": "hojin.choe.dev@gmail.com"
+  },
+  "homepage": "https://github.com/pleming/local-radius-building-finder",
+  "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "electron": "^27.1.0",
+    "electron-builder": "^24.9.1",
+    "nodemon": "^3.0.1"
+  },
+  "build": {
+    "productName": "local-radius-building-finder",
+    "appId": "com.github.pleming.finder.building.radius.local",
+    "asar": true,
+    "mac": {
+      "target": [
+        "default"
+      ]
+    },
+    "dmg": {
+      "title": "local-radius-building-finder"
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "perMachine": false,
+      "language": 1042,
+      "installerLanguages": [
+        "en_US",
+        "ko_KR"
+      ],
+      "shortcutName": "local-radius-building-finder",
+      "artifactName": "local-radius-building-finder_${version}.${ext}",
+      "uninstallDisplayName": "local-radius-building-finder"
+    },
+    "linux": {
+      "target": [
+        "deb",
+        "tar.gz"
+      ]
+    },
+    "directories": {
+      "buildResources": ".",
+      "output": "./dist/"
+    }
+  }
 }
