--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/pleming/local-radius-building-finder",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^1.6.5",
     "cross-env": "^7.0.3",
     "electron": "^28.1.4",
     "electron-builder": "^24.9.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "puppeteer": "^21.7.0"
   },
   "build": {
     "productName": "local-radius-building-finder",
