--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   },
   "homepage": "https://github.com/pleming/local-radius-building-finder",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "axios": "^1.6.5",
+    "puppeteer": "^21.7.0"
+  },
+  "devDependencies": {
     "cross-env": "^7.0.3",
     "electron": "^28.1.4",
     "electron-builder": "^24.9.1",
-    "nodemon": "^3.0.3",
-    "puppeteer": "^21.7.0"
+    "nodemon": "^3.0.3"
   },
   "build": {
     "productName": "local-radius-building-finder",
